# FPS

./: .gitignore  CMakeLists.txt  README.md  build-msvc-x64-static.bat  build-msvc-x64.bat  build-msvc-x86-static.bat  build.bat  main.cpp
lib/: CMakeLists.txt  draw.h
src/: main.cpp
src/modules/: eventloop.cpp  eventloop.h
